frontend/src/app/borrowers/Borrowers.css
body, html {
    height: 100%;
    width: 100%;
    margin: 0;
    display: flex;
    align-items: center; 
    justify-content: center; 
}

.Items {
    height: 100%;
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    padding: 0 1vw;
    padding-top: 3vh;
}

